--- a/templates/addclienti.html
+++ b/templates/addclienti.html
@@ -1,46 +1,63 @@
 {% extends "template.html" %}
 {% block title %}Aggiungi Clienti{% endblock %}
 {%  block pagecontent %}
-<h1>Aggiunta Cliente</h1>
+<br>
 <div class="superiore">
   <div class="card border-dark mb-3">
-    <h4 class="card-header">Nuovo Cliente</h4>
+    <h4 class="card-header titoli">Nuovo Cliente</h4>
     <div class="card-body text-dark">
       <form method="POST">
         <div class="form-group">
-          <label for="codicefiscale">Codice Fiscale</label>
-          <input name="cf" type="text" class="form-control" required>
+          <label for="codicefiscale" class="scrittebase">Codice Fiscale</label>
+          <input name="cf" type="text" class="form-control scrittebase" required>
         </div>
 
         <div class="form-row">
           <div class="form-group col-md-6">
-            <label for="inputEmail4">Nome</label>
-            <input  name="nome" type="text" class="form-control" required>
+            <label for="inputEmail4" class="scrittebase">Nome</label>
+            <input  name="nome" type="text" class="form-control scrittebase" required>
           </div>
           <div class="form-group col-md-6">
-            <label for="inputPassword4">Cognome</label>
-            <input name="cognome" type="text" class="form-control" required>
+            <label for="inputPassword4" class="scrittebase">Cognome</label>
+            <input name="cognome" type="text" class="form-control scrittebase" required>
           </div>
         </div>
 
         <div class="form-row">
           <div class="form-group col-md-6">
-            <label for="inputEmail4">Numero di telefono</label>
-            <input  name="ntelefono" type="text" class="form-control" required>
+            <label for="inputEmail4" class="scrittebase">Numero di telefono</label>
+            <input  name="ntelefono" type="text" class="form-control scrittebase" required>
           </div>
           <div class="form-group col-md-6">
-            <label for="inputPassword4">Email</label>
-            <input name="email" type="email" class="form-control" required>
+            <label for="inputPassword4" class="scrittebase">Email</label>
+            <input name="email" type="email" class="form-control scrittebase" required>
           </div>
         </div>
         <br>
         <center>
-          <input name="sub" class="btn btn-primary btn-outline-primary btn-lg" type="submit" value="Aggiungi">
+          <input name="sub" class="btn btn-primary btn-outline-primary btn-lg scrittebase" type="submit" value="Aggiungi">
         </center>
         <br>
       </form>
     </div>
   </div>
 </div>
+<center>
+{% if frase!="" %}
+{% if frase=="Nuovo Cliente Aggiunto"%}
+<div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+  <div class="card-header">{{frase}}</div>
+</div>
 <br>
+{%else%}
+<div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
+  <div class="card-header">{{frase}}</div>
+</div>
+<br>
+{%endif%}
+
+{%endif%}
+
+</center>
+
 {% endblock %}
